fixed the display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,7 @@ html {font-size: 16px;}
 body {font-family: 'Lato', sans-serif; font-weight: 400;color: #fff;}
 /*.container-fluid,.container {padding-right: 0;padding-left: 0;}*/
 .navbar-fixed-top { margin: auto;}
-@media (max-width: 492px)
-{
-  .container {width: 410px;}
-}
+
 @media (min-width:480px) and (max-width: 767px){
   .container
    {width: 95%;}
@@ -119,7 +116,7 @@ hr {width:45px;  border-width: 2px; text-align: left;}
 #about .container img {float:right;max-width:30%; max-height:30%;  width:auto; height:auto;border-radius: 50%; border:10px solid #555;margin-top: .5rem; }
 @media (max-width: 448px)
 { 
-    body {width:448px;} 
+   /* body {width:448px;} */
     #about .container {display: flex; flex-direction: column-reverse; align-items: center; padding-bottom: 2rem;}
 }
 @media (min-width: 449px) and (max-width:767px) {
